--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     },
     "devDependencies": {
         "axios": "^1.7.4",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.80.4",
+        "sass-loader": "^12.1.0",
         "vite": "^5.0"
     }
 }
