--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.80.4",
         "sass-loader": "^12.1.0",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "webpack-bundle-analyzer": "^4.10.2"
     }
 }
